<resources>
    <string name="ACTIVATING_MACHINE_MSG">Activating Machine</string>
    <string name="AGREE">Agree</string>
    <string name="BLUETOOTH_COULDNT_FIND_MACHINE_MSG">We couldn\'t find the machine you scanned. Please reset your phone and try again.</string>
    <string name="BLUETOOTH_COULDNT_FIND_MACHINE_TITLE">Machine Not Found</string>
    <string name="CANCEL">Cancel</string>
    <string name="CARD_ADDED_SUCCESS_MSG">Card added successfully!</string>
    <string name="CARD_DELETEING_ERROR">An error occurred while deleting the card. Please try again.</string>
    <string name="CARD_ENDING_IN_MSG">Card Ending in</string>
    <string name="CARD_ENDING_MSG">Card ending in %s</string>
    <string name="CELLULAR_WIFI_CONNECT_MSG">Please connect to a WiFi or cellular network to continue using ShinePay.</string>
    <string name="CHANGE_PAYMENT">Change Payment Method</string>
    <string name="CHARGE_SUCCESSFUL">Charge was successful.</string>
    <string name="CONFIRM_READING_TOS_MSG">Please confirm you have read and agree to the TOS.</string>
    <string name="CONTINUE">Continue</string>
    <string name="CONVENIENCE_FEE">Convenience Fee</string>
    <string name="CONVIENCE_FEE_MESSAGE" formatted="false">$%.2f, including a $%.2f credit card processing fee will be charged to the card ending in %s. This deposit is non refundable for cash value. Do you want to continue?</string>
    <string name="CURRENT_BALANCE">Current Balance</string>
    <string name="CUSTOM_AMOUNT">Please Enter Custom Amount:</string>
    <string name="CUSTOM_AMT_BTN">Custom\nAmount</string>
    <string name="DECLINE">Decline</string>
    <string name="DEFAULT_PAYMENT_UPDATED">Default Payment Updated.</string>
    <string name="DELETE">Delete</string>
    <string name="DELTED_PAYMENT_SOURCE">Removed credit card from account</string>
    <string name="DEPOSIT">Deposit</string>
    <string name="DEPOSIT_FUNDS">Deposit Funds</string>
    <string name="DEPOSIT_PAYMENT_MSG">Deposit Payment of $%.2f USD</string>
    <string name="DEPSOIT_PAYMENT_MSG">Deposit Payment of $%s USD</string>
    <string name="DO_YOU_WANT_A_REFUND">Do you want to request a refund?</string>
    <string name="ENTER">Enter</string>
    <string name="ENTER_EMAIL_ADDRESS_MSG">Enter email address!</string>
    <string name="ENTER_EMAIL_MESSAGE">Enter the email you registered with</string>
    <string name="ENTER_MACHINE_ID_MSG">Please enter a valid machine ID</string>
    <string name="ENTER_MANUALLY">Enter Number Manually</string>
    <string name="ENTER_PASSWORD_MSG">Enter password!</string>
    <string name="ERROR_UPDATING_CARD">An error occured while updating the card. Please try again.</string>
    <string name="FAILED_RESET_PASSWORD_MSG">Failed to send reset email!</string>
    <string name="FIFTEEN_DOLLARS">$15</string>
    <string name="FIVE_DOLLARS">$5</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>
    <string name="FORGOT_YOUR_PASSWORD">Forgot Your Password?</string>
    <string name="GOT_IT">Got it</string>
    <string name="LACK_OF_FUNDS_MSG">You do not have enough funds to complete this purchase.</string>
    <string name="LEARN_MORE">Learn More</string>
    <string name="LIMITED_FUNCTIONALITY_MSG">Functionality limited</string>
    <string name="LOCATION_ACCESS_MSG">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
    <string name="LOCATION_ACCESS_REQUEST_MSG">Please grant location access so this app can detect peripherals.</string>
    <string name="LOCATION_REQUEST_TITLE_MSG">Request Location Access</string>
    <string name="MACHINE_BROKEN_MSG">That machine is broken.</string>
    <string name="MACHINE_DOESNT_EXIST_MSG">That machine doesn\'t exist</string>
    <string name="MACHINE_ID">Machine ID</string>
    <string name="MACHINE_NOT_ENABLED">Machine is not enabled</string>
    <string name="MACHINE_NOT_FOUND_MSG">Couldn\'t Find Machine — Money Refunded</string>
    <string name="MACHINE_SELECTION">Machine Selection</string>
    <string name="MINIMUM_VERSION">Minimum Version</string>
    <string name="NO">No</string>
    <string name="NOT_TODAY">Not Today</string>
    <string name="NO_INTERNET">No Internet</string>
    <string name="NUMERICAL_VALUE_ERROR_MSG">Please provide a numerical value! e.g. 25.00</string>
    <string name="PASSWORD_RESET_INSTRUCTIONS_SENT">We have sent you instructions to reset your password!</string>
    <string name="PERMISSIONS">Permissions</string>
    <string name="PRICE">Price</string>
    <string name="RANDOM_AMOUNT">$16.29 USD</string>
    <string name="REFUND_APPROVAL">Refund Approved</string>
    <string name="REFUND_DENIAL">Refund Denial</string>
    <string name="REFUND_REQUEST">Refund Request</string>
    <string name="REFUND_REQUEST_SUCCESS">Refund successfully requested.</string>
    <string name="RESET_PASSWORD_SENT_MSG">Reset password sent.</string>
    <string name="REVIEW">Review</string>
    <string name="REVIEW_PROMPT_1">Do you enjoy using ShinePay?</string>
    <string name="REVIEW_PROMPT_2">Would you mind giving us a review?</string>
    <string name="REVIEW_PROMPT_3">Do you want to give us feedback?</string>
    <string name="SCAN_QR_BUTTON">Scan Your Machine To Pay</string>
    <string name="SCAN_QR_CODE">1. Look for the QR code \n\n2. Scan to pay. :)</string>
    <string name="SENT">Sent</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="SIGN_UP">Sign Up</string>
    <string name="START_ACTIVATION_PROCESS_MSG">Starting Activation Process</string>
    <string name="START_MACHINE_BTN_MSG">Start Machine - $%.2f USD</string>
    <string name="START_YOUR_MACHINE">Start Your Machine</string>
    <string name="SUCCESS">Success</string>
    <string name="TOS_MSG">Terms of Service Update</string>
    <string name="TRANSACTION">Transaction</string>
    <string name="TRANSACTION_SUCCESSFUL">Transaction Successful!</string>
    <string name="TRANSACTION_UNSUCCESSFUL">Unsuccessful Transaction!</string>
    <string name="TWENTY_FIVE_DOLLARS">$25</string>
    <string name="UPDATE_APP_BELOW_MINIMUM_VERSION">This app is below the minimum version. Please update it in the Google Play Store.</string>
    <string name="WHY_WE_NEED_LOCATION_SERVICES">Location services are required for bluetooth pairing to function. ShinePay does not use your location. ShinePay uses Bluetooth to communicate with the laundry machines. Press continue to enable location access.</string>
    <string name="WRONG_MACHINE_ENTERED">Incorrect machine ID entered or this machine has not been added by the owner.</string>
    <string name="YES">Yes</string>
    <string name="_CUSTOM_AMOUNT">Custom Amount</string>
    <string name="_ENTER_MACHINE_ID_MSG">Please enter a valid machine ID.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="btn_link_to_register">Sign Up</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_start">Start Machine - %s</string>
    <string name="forgot_password_msg">Please provide your registered email address and we will send you the password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
</resources>