<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="top"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/DEPOSIT_FUNDS">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/topheader"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:textColor="@color/colorSecondaryDark"
                android:gravity="center_horizontal"
                android:id="@+id/machine_id_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CURRENT_BALANCE"/>
            <TextView
                android:textSize="20dp"
                android:textColor="@color/colorSecondaryDark"
                android:gravity="center_horizontal"
                android:id="@+id/balance_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$16.29 USD"/>
        </LinearLayout>
        <androidx.gridlayout.widget.GridLayout
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:rowCount="2">
            <Button
                android:textSize="27sp"
                android:gravity="center"
                android:id="@+id/btn_1"
                android:background="@drawable/bordered_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/FIVE_DOLLARS"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1"/>
            <Button
                android:textSize="27sp"
                android:gravity="center"
                android:id="@+id/btn_2"
                android:background="@drawable/bordered_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/FIFTEEN_DOLLARS"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1"/>
            <Button
                android:textSize="27sp"
                android:gravity="center"
                android:id="@+id/btn_3"
                android:background="@drawable/bordered_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/TWENTY_FIVE_DOLLARS"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1"/>
            <Button
                android:gravity="center"
                android:id="@+id/btn_4"
                android:background="@drawable/bordered_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/CUSTOM_AMT_BTN"
                android:textAllCaps="false"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1"/>
        </androidx.gridlayout.widget.GridLayout>
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/white"
                android:id="@+id/btn_change_payment_method"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CHANGE_PAYMENT"
                android:textAllCaps="false"/>
            <TextView
                android:textColor="@color/colorSecondary"
                android:id="@+id/selected_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        </LinearLayout>
        <Button
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/btn_deposit_payment"
            android:background="@drawable/shapes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DEPSOIT_PAYMENT_MSG"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/progressLayout"
        android:background="@drawable/background"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/DEPOSIT_FUNDS"
        android:alpha="0.5">
        <ProgressBar
            android:id="@+id/selectionProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateDrawable="@xml/progress"
            android:layout_centerInParent="true"
            android:alpha="1"/>
    </LinearLayout>
</RelativeLayout>
