<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="top"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_marginBottom="30dp"
            android:src="@drawable/auth_icon"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:titleTextStyle="@android:color/white"
                android:backgroundTint="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:backgroundTint="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:textColor="@color/colorPrimary"
            android:id="@+id/btn_sign_in"
            android:background="@drawable/shapes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_sign_in"
            android:textAllCaps="false"/>
        <Button
            android:textColor="@color/colorSecondary"
            android:id="@+id/btn_reset_password"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/FORGOT_YOUR_PASSWORD"
            android:textAllCaps="false"/>
        <Button
            android:textSize="15sp"
            android:textColor="@color/white"
            android:id="@+id/btn_sign_up"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
