<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="top"
        android:orientation="vertical"
        android:id="@+id/start_machine_view"
        android:background="@drawable/background"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="20dp"
            android:textColor="@color/colorSecondary"
            android:gravity="center_horizontal"
            android:id="@+id/title_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/START_YOUR_MACHINE"
            android:layout_centerInParent="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:textSize="20dp"
                    android:textColor="@color/colorSecondaryDark"
                    android:gravity="center_horizontal"
                    android:id="@+id/machine_id_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MACHINE_ID"/>
                <TextView
                    android:textColor="@color/colorSecondaryDark"
                    android:gravity="center_horizontal"
                    android:id="@+id/machine_id_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1000003"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:textSize="20dp"
                    android:textColor="@color/colorSecondaryDark"
                    android:gravity="center_horizontal"
                    android:id="@+id/balance_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CURRENT_BALANCE"/>
                <TextView
                    android:textColor="@color/colorSecondaryDark"
                    android:gravity="center_horizontal"
                    android:id="@+id/balance_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$0.00 USD"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:textSize="20dp"
                    android:textColor="@color/colorSecondary"
                    android:gravity="center_horizontal"
                    android:id="@+id/price_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PRICE"/>
                <TextView
                    android:textColor="@color/colorSecondary"
                    android:gravity="center_horizontal"
                    android:id="@+id/price_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="---"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:textSize="20dp"
                    android:textColor="@color/colorSecondaryDark"
                    android:gravity="center_horizontal"
                    android:id="@+id/convenience_fee_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CONVENIENCE_FEE"/>
                <TextView
                    android:textColor="@color/colorSecondaryDark"
                    android:gravity="center_horizontal"
                    android:id="@+id/convenience_fee_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$0.00 USD"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/btn_start_machine"
            android:background="@drawable/shapes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_start"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>
        <ProgressBar
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/activationProgressBar"
            android:background="@xml/progress"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/startMachineProgressLayout"
        android:background="@drawable/background"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/DEPOSIT_FUNDS"
        android:alpha="0.5">
        <ProgressBar
            android:id="@+id/startMachineProgressSpinner"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateDrawable="@xml/progress"
            android:layout_centerInParent="true"
            android:alpha="1"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
